fix locales, pagination and other small fixs
